Add contact us to help menu Put privacy policy on help menu

--- a/qt.ini.example
+++ b/qt.ini.example
@@ -17,9 +17,11 @@ license_path       = /licenses/license.php
 terms_path         = /licenses/terms.php
 
 [Email]
-qt_admin_email  = admin@qurantools.acme.org   ; used by email_qt() function
-qt_developers[] = dev1@qurantools.acme.org    ; used by email_error_to_qt(). for multiple emails, just add extra lines
-;qt_developers[] = dev2@qurantools.acme.org
+
+show_contact_us_link = false                      ; if true, there will be a contact us option on the help menu
+qt_admin_email       = admin@qurantools.acme.org  ; used by email_qt() function
+qt_developers[]      = dev1@qurantools.acme.org   ; used by email_error_to_qt(). for multiple emails, just add extra lines
+;qt_developers[]     = dev2@qurantools.acme.org
 
 
 [Google Stuff]
